--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,45 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Dusicaangular</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <title>Studio Rakic</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom fonts for this template -->
+  <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+
+  <!-- Plugin CSS -->
+  <link href="assets/vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="assets/css/creative.min.css" rel="stylesheet">
+
+<!-- modernizr enables HTML5 elements and feature detects -->
+<script type="text/javascript" src="assets/js/modernizr-1.5.min.js"></script>
 </head>
-<body>
-  <app-root></app-root>
+<body id="page-top">
+    <app-root></app-root>
+
+
+<!-- Bootstrap core JavaScript -->
+<script src="assets/vendor/jquery/jquery.min.js"></script>
+<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+<!-- Plugin JavaScript -->
+<script src="assets/vendor/jquery-easing/jquery.easing.min.js"></script>
+<script src="asets/vendor/scrollreveal/scrollreveal.min.js"></script>
+<script src="assets/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+
+
+
+
 </body>
 </html>
